--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-webpack": "^3.0.5",
     "react-addons-test-utils": "^15.6.2",
+    "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-hot-loader": "^4.8.4",
     "webpack": "^4.31.0",
